fix: accessibility, best practices

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "luna_ecommerce",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "update-packages": "ncu --reject eslint,eslint-config-next && ncu -u && npm install"
+    "update-packages": "ncu --reject eslint,eslint-config-next && ncu -u && npm install",
+    "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
-  
   "dependencies": {
     "@clerk/localizations": "^2.4.3",
     "@clerk/nextjs": "^5.1.3",
@@ -42,6 +42,7 @@
     "eslint-config-next": "14.2.3",
     "lucide-react": "^0.381.0",
     "next": "^14.2.3",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "postcss": "8.4.24",
     "query-string": "^9.0.0",
