--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
+    "react-input-mask": "^2.0.4",
     "react-spinners": "^0.13.8",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
@@ -65,6 +66,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
