--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luna_ecommerce",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -52,6 +52,7 @@
     "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.33.4",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.2",
