--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luna_ecommerce",
-  "version": "0.1.4",
+  "version": "0.1.8",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -16,6 +16,7 @@
     "@clerk/themes": "^2.1.8",
     "@headlessui/react": "^2.0.4",
     "@hookform/resolvers": "^3.4.2",
+    "@next/third-parties": "^14.2.4",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -29,25 +30,25 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "clipboard-copy": "^4.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "eslint": "9.3.0",
     "eslint-config-next": "14.2.3",
     "lucide-react": "^0.381.0",
-    "next": "^14.2.3",
+    "next": "^14.2.5",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "postcss": "8.4.24",
     "query-string": "^9.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-countdown": "^2.3.5",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
@@ -57,15 +58,14 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.3",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.14.13",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@types/react-input-mask": "^3.0.5",
     "autoprefixer": "^10.4.19",
@@ -74,6 +74,6 @@
     "postcss": "^8",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
